jsonschemadsl2ecore.trafo.opt/test/test84/validtests/example11.test84
{
	"123":123,
	"$33":33,
	"-&$#":null,
	"a-b$":{},
	"##":{
		"PP_":"something",
		"PP_-a":"something 2"
	}
}  