jsonschemadsl2ecore.trafo.opt/test/test84/invalidtests/example3.test84
{
	"123":123,
	"$33":33
}